# gsdcjobqueue

./: README.md  bootstrap.sh  fileset.json  pyproject.toml  setup.cfg  simple_example.py
src/gsdcjobqueue/: __init__.py  cluster.py  config.yaml  schedd.py
